<resources>
    <string name="facebook_application_id">699323436868470</string>
    <string name="twitter_consumer_key_debug">lqLPEOgkSimpDc3FkBmSYihRC</string>
    <string name="twitter_consumer_key_release">vzFVqnQ85L0fTcfGomLgmXO2K</string>
    <string name="twitter_consumer_secret_debug">qfMhDQfRJevhnoGRMkwG4uHl0cBRDrypDYOqsFTkWqaM34jgIZ</string>
    <string name="twitter_consumer_secret_release">cP1ljN2JciWg6EZwlFSAj2PDLnTiBhO7q4rQb8p81RkT3v7ddl</string>
    <string name="linked_in_client_id">75ckz7mv6c5cls</string>
    <string name="linked_in_secret">4gjGk77lECBSn6u3</string>
    <string name="opentok_dev_api_key">45559722</string>
    <string name="opentok_prod_api_key">45577952</string>
    <string name="alert_title">Hey, just a quick question before you leave!</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=io.methinks.android</string>
    <string name="parse_app_id">myAppId</string>
    <string name="parse_client_key">myClientKey</string>
    <string name="parse_server_url">http://methinks-dev.us-east-1.elasticbeanstalk.com/parse/</string>
    <string name="parse_app_id_release">YD9CKosHpxy6rzjKoOuupsVSawNnd91pbnce3pq3</string>
    <string name="parse_client_key_release">Fneut4OcLRiMzkHHXTOU07nm7XVkWDgIdxH3HtJI</string>
    <string name="parse_server_url_release">https://www.methinks.io/parse</string>
    <string name="parse_app_id_staging">YD9CKosHpxy6rzjKoOuupsVSawNnd91pbnce3pq3</string>
    <string name="parse_client_key_staging">Fneut4OcLRiMzkHHXTOU07nm7XVkWDgIdxH3HtJI</string>
    <string name="parse_server_url_staging">https://staging.methinks.io/parse</string>
    <string name="parse_sdk_version">1.16.7</string>
    <string name="question_object_id_skip_target_app_list_debug">1ZQeHMyCHb</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="time_placeholder">00:00 AM</string>
    <string name="date_placeholder">MM/DD/YYYY</string>
    <string name="font_weight_regular">regular</string>
    <string name="font_weight_medium">medium</string>
    <string name="font_weight_bold">bold</string>
    <string name="common_text_gig">Gig</string>
    <string name="common_msg_walk_through_gig">methinks provides our thinkers (you!) with gigs that match your passions and interests.</string>
    <string name="common_text_test">Test</string>
    <string name="common_msg_walk_through_test">Businesses want thinkers to try their products and to help make them better - apply to test apps, play games, and get paid.</string>
    <string name="common_text_chat">Chat</string>
    <string name="common_msg_walk_through_chat">Businesses want to meet you and hear what you have to say about their products - apply to participate in live video chats inside the methinks app. </string>
    <string name="common_text_survey">Survey</string>
    <string name="common_msg_walk_through_survey">Use a few minutes of downtime to take on an express gig, including surveys.</string>
    <string name="common_text_earn">Earn</string>
    <string name="common_msg_walk_through_earn">Get paid! Your earnings will be sent directly to your PayPal account on a weekly basis (or receive an Amazon gift card).</string>
    <string name="common_msg_use_your_invitation_code">Use your invitation code</string>
    <string name="common_text_invitation_code">Invitation Code</string>
    <string name="common_msg_allow_location">Allow Location</string>
    <string name="common_msg_location_description">Providing your location information allows businesses to more easily discover you, which will increase the chance of getting paid gigs. Your exact location (such as street address) will never be shared to anyone.</string>
    <string name="common_text_turn_on_notifications">Turn on Notifications?</string>
    <string name="common_msg_push_setting_request">Communications with businesses, and important updates about interviews will be delivered via Push Notification. Enable this feature so you can quickly make a response, which in return will help you secure paid gigs. We will never use Push Notification for marketing purposes.</string>
    <string name="common_text_enter_your_code">Enter your Code</string>
    <string name="common_text_log_in">Log in</string>
    <string name="common_text_forgot_your_password">Forgot your password?</string>
    <string name="common_text_sign_up">Sign up</string>
    <string name="common_text_yes_enable_notifications">Yes, enable notifications</string>
    <string name="common_text_skip">Skip</string>
    <string name="common_msg_yes_get_current_location">Yes, get current Location</string>
    <string name="common_msg_join_the_interview_now">Join the Interview Now!</string>
    <string name="common_text_notice">Notice</string>
    <string name="common_text_rationale_location">Rationale Location</string>
    <string name="common_text_home">Home</string>
    <string name="common_text_paid_gigs">Paid Gigs</string>
    <string name="common_text_messages">Messages</string>
    <string name="common_text_build_profile">Build Profile</string>
    <string name="common_msg_increase_your_discoverability">Increase your discoverability to get paid gigs</string>
    <string name="common_text_hi">Hi,</string>
    <string name="common_text_how_to_gig">How to gig</string>
    <string name="common_msg_what_to_do_with_gig">What to do once you’ve landed a gig</string>
    <string name="common_text_privacy">Privacy</string>
    <string name="common_msg_how_methinks_uses_your_info">Learn how methinks uses your personal information</string>
    <string name="common_msg_go_to_paid_gigs">Go to Paid Gigs</string>
    <string name="common_msg_you_do_not_have_a_schedule">You do not have a schedule yet. Go to the paid Gigs tab and apply for a new interview.</string>
    <string name="common_msg_invalid_email_address">The email address is invalid. Please enter a valid email.</string>
    <string name="common_msg_please_enter_an_email">Please enter an email.</string>
    <string name="common_msg_please_enter_a_password">Please enter a password.</string>
    <string name="common_msg_email_already_exist">The email USER_EMAIL is taken. Please try choosing a different email.</string>
    <string name="common_text_create_your_methinks_account">Create your methinks account</string>
    <string name="common_text_lets_get_started">Let\'s get Started!</string>
    <string name="common_text_retry_account_login">Retry account login</string>
    <string name="common_text_grade">Grade</string>
    <string name="common_text_rate">Rate</string>
    <string name="common_text_completion">Completion</string>
    <string name="common_text_interview_time">Interview Time</string>
    <string name="common_text_connecting">Connecting...</string>
    <string name="common_text_reconnect">Reconnect</string>
    <string name="common_text_password_confirmation">Password Confirmation</string>
    <string name="common_text_profile">Profile</string>
    <string name="common_text_enter_your_email">Enter your Email</string>
    <string name="common_msg_enter_your_full_name">Enter your full name</string>
    <string name="common_text_send_request">Send Request</string>
    <string name="common_text_interview_detail">Interview Detail</string>
    <string name="common_text_accept">Accept</string>
    <string name="common_text_interview_schedule">Interview Schedule</string>
    <string name="common_text_requesting_schedule_change">Requesting schedule change...</string>
    <string name="common_text_app_testing">App Testing</string>
    <string name="common_text_gig_from_methinks">Gig from methinks</string>
    <string name="common_text_apply">Apply</string>
    <string name="common_text_submit">Submit</string>
    <string name="common_text_contact_us">Contact Us</string>
    <string name="common_text_more">More</string>
    <string name="common_text_link_linkedin">Link LinkedIn</string>
    <string name="common_msg_like_methinks_rate_us">Like methinks? Rate us!</string>
    <string name="common_text_privacy_policy">Privacy Policy</string>
    <string name="common_text_log_out">Log out</string>
    <string name="common_text_you_have_applied">You\'ve applied</string>
    <string name="common_msg_thank_you_for_applying">Thank you for applying!\nWe will review your application and contact you if you are qualified.</string>
    <string name="common_text_ok">OK</string>
    <string name="common_text_successfully_applied">Successfully applied</string>
    <string name="common_text_canceled">Canceled</string>
    <string name="common_text_negotiating">Negotiating</string>
    <string name="common_text_in_progress">In Progress</string>
    <string name="common_text_good_connection">Good Connection</string>
    <string name="common_text_punctual">Punctual</string>
    <string name="common_text_rate_your_interview_experience">Rate your interview\nexperience</string>
    <string name="common_text_select_thinker_traits">Select researcher traits</string>
    <string name="common_msg_not_good_at_all">Not good at all!</string>
    <string name="common_text_poor_quality">Poor quality</string>
    <string name="common_text_it_was_ok">It was ok</string>
    <string name="common_text_it_was_great">It was great</string>
    <string name="common_text_supurb_quality">Superb quality!</string>
    <string name="common_text_late">Late</string>
    <string name="common_text_bad_connection">Bad connection</string>
    <string name="common_text_complete">Complete</string>
    <string name="common_msg_thank_you_for_providing_feedback">Thank you for providing feedback to help make methinks a better community for thinkers, researchers, and businesses!</string>
    <string name="common_text_write_text_here">Write text here.</string>
    <string name="common_text_organized">Organized</string>
    <string name="common_text_clear_communication">Clear communication</string>
    <string name="common_text_unclear_communication">Unclear communication</string>
    <string name="common_text_unorganized">Unorganized</string>
    <string name="common_text_core_profile">Core Profile</string>
    <string name="common_msg_core_profile">Key personal and demographic info helps researchers find you</string>
    <string name="common_msg_gaming">Are you a gamer? Let researchers know the specifics here</string>
    <string name="common_msg_lifestyle">Give researchers a sense of how you spend your free time</string>
    <string name="common_msg_shopping">Provide researchers with details on how you shop for pleasure</string>
    <string name="common_msg_app_usage">Tell researchers about the apps you use on your smartphone</string>
    <string name="common_msg_technology">If your\'re a techie, tell researchers your favorite devices here</string>
    <string name="common_msg_personal_media">Upload helpful media to give researchers a better idea of you</string>
    <string name="common_msg_tv_n_streaming">Help researchers understand your TV and streaming habits</string>
    <string name="common_msg_extended_core_profile">Additional personal info to enhance your discoverability</string>
    <string name="common_msg_confirm_exit_app">Are you sure you want to close methinks?</string>
    <string name="common_text_prev">Prev</string>
    <string name="common_text_skip_uppercap">Skip</string>
    <string name="common_msg_microphone_permission">Microphone permission is not granted. Some features such as video chat and voice response that require microphone permission will not work properly.</string>
    <string name="common_msg_change_how_you_answer">Change how you answer</string>
    <string name="common_text_video_answer">Video Answer</string>
    <string name="common_text_voice_answer">Voice Answer</string>
    <string name="common_text_text_answer">Text Answer</string>
    <string name="common_text_next">Next</string>
</resources>