<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/question_action_button_container"
    android:orientation="vertical"
    android:background = "@color/white"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize">

    <View
        android:background="@color/very_light_blue"
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent">
        <Button
            android:id = "@+id/prev_button"
            android:visibility = "gone"
            android:text="@string/common_text_prev"
            android:textSize="14dp"
            app:fw="@string/font_weight_medium"

            android:textColor="@color/cornflower"
            android:letterSpacing="0.04"
            android:gravity="center"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/skip_button"
            android:visibility="gone"
            android:text="@string/common_text_skip_uppercap"
            android:textSize="14dp"
            app:fw="@string/font_weight_medium"

            android:textColor="@color/charcoal_grey_87"
            android:letterSpacing="0.04"
            android:gravity="center"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/submit_button"
            android:text="@string/common_text_submit"
            android:textSize="14dp"
            app:fw="@string/font_weight_medium"

            android:textColor="@color/cornflower"
            android:letterSpacing="0.04"
            android:gravity="center"
            android:background="@android:color/transparent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>