<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_action_button_container"
    android:orientation="vertical"
    android:background="@color/baseBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/button_container_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="false"
        android:focusable="false">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:cornerRadius="@dimen/cornerRound"
            android:backgroundTint="@color/baseGray2"
            android:text="@string/common_text_skip"
            android:textColor="@color/lightTextColor"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/complete_button"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            app:cornerRadius="@dimen/cornerRound"
            android:text="@string/common_text_complete"
            android:textColor="@color/lightTextColor"
            android:textSize="16sp"
            android:paddingHorizontal="24dp"
            android:drawableLeft="@drawable/ic_baseline_check_circle_outline_24"
            android:backgroundTint="@color/primaryColor"
            android:drawableTint="@color/lightTextColor"
            android:drawablePadding="8dp"

            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            app:cornerRadius="@dimen/cornerRound"
            android:backgroundTint="@color/baseGreen"
            android:text="@string/common_text_next"
            android:textColor="@color/lightTextColor"
            android:textSize="16sp"
            android:paddingHorizontal="24dp"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:drawableTint="@color/lightTextColor"
            android:drawablePadding="8dp"
            />
    </RelativeLayout>
</LinearLayout>
