<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/sliding_up_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/close_sliding_panel"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/common_msg_change_how_you_answer"
            android:textSize="16sp"
            app:fw="@string/font_weight_regular"

            android:textColor="@color/charcoal_grey"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="4dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:clickable="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:alpha="0.87"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/replace_to_text"
        android:visibility="gone"
        android:clickable="true"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/text_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_question_openended"
            android:alpha="0.54"
            android:background="@android:color/transparent"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/replace_to_text_text_view"
            app:layout_constraintLeft_toRightOf="@id/text_icon"
            android:text="@string/common_text_text_answer"
            android:textSize="16sp"
            app:fw="@string/font_weight_regular"

            android:textColor="@color/charcoal_grey"
            android:lineSpacingExtra="8dp"
            android:layout_marginLeft="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/replace_to_voice"
        android:visibility="gone"
        android:clickable="true"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/voice_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_video_interview_voice_active"
            android:alpha="0.54"
            android:background="@android:color/transparent"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/replace_to_voice_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/voice_icon"
            android:text="@string/common_text_voice_answer"
            android:textSize="16sp"
            app:fw="@string/font_weight_regular"

            android:textColor="@color/charcoal_grey"
            android:lineSpacingExtra="8dp"
            android:layout_marginLeft="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/replace_to_video"
        android:visibility="gone"
        android:clickable="true"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/video_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_video_interview_video_active"
            android:alpha="0.54"
            android:background="@android:color/transparent"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <io.mtksdk.inappsurvey.custom.widget.MethinksTextView
            android:id="@+id/replace_to_video_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/video_icon"
            android:text="@string/common_text_video_answer"
            android:textSize="16sp"
            app:fw="@string/font_weight_regular"

            android:textColor="@color/charcoal_grey"
            android:lineSpacingExtra="8dp"
            android:layout_marginLeft="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

